<resources>
    <string name="app_name">Android Login and Registration</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_sigin">SIGNIN</string>
    <string name="btn_signup">SIGNUP</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_fb">Sign with Facebook</string>
    <string name="btn_tw">Sign with Twitter</string>
    <string name="btn_gmail">Sign with Gmail</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Selamat Anda Berhasil Masuk</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

</resources>
